--- a/force-app/main/default/classes/PerformOpportunityReconcilliation.cls
+++ b/force-app/main/default/classes/PerformOpportunityReconcilliation.cls
@@ -67,7 +67,7 @@ global class PerformOpportunityReconcilliation implements Database.Batchable<sOb
           TotalJobItems, CreatedBy.Email from AsyncApexJob where Id =:BC.getJobId()];
        // Send an email to the Apex job's submitter notifying of job completion. 
        Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
-       String[] toAddresses = new String[] {'priyanka.ghosh3@cognizant.com'};
+       String[] toAddresses = system.label.Exception_emails_for_batches.split(',');
        mail.setToAddresses(toAddresses);
        mail.setSubject('Apex Sharing Recalculation ' + a.Status);
        mail.setPlainTextBody
